--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HealthSync</title>
-  <link rel="stylesheet" href="/client/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>HealthSync - Personal Health Dashboard</h1>
