--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   
-    <script src="/client/script.js"></script>
+    <script src="script.js"></script>
   </body>
   
 </html>
